refactored fetch. not working yet

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                     <h1 class="mt-4">Simple Sidebar Test Environment</h1>
                     <p>The Experiment is either deactivated or nothing has been fetched.</p>
                     <p>
-                        <button class='btn btn-success' onclick=response();>Fetch(user)</button>
-                        <pre style="color:green;" id='fetchValues'>Fetch Response displayed here</pre>
+                        <button class='btn btn-success action'>Fetch</button>
+                        <button class='btn btn-danger action'>Variant</button>
+                        <pre style="color:green;" id="displayResponse">Response displayed here</pre>
                     </p>
                 </div>
             </div>
