--- a/routes/dashboard.html
+++ b/routes/dashboard.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <script src='./js/scripts.js'></script>
 
 </head>
 
