--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Simple Sidebar</title>
+        <title>Experiment Test Environment</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://unpkg.com/amplitude-js"></script>
         <script src="https://unpkg.com/@amplitude/experiment-js-client@1.4.0/dist/experiment.umd.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/analytics.js"></script>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
+                <div class="sidebar-heading border-bottom bg-light">Sidebar</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="./routes/dashboard.html">Dashboard</a>
+                    <!-- <a class="list-group-item list-group-item-action list-group-item-light p-3" href="./routes/dashboard.html">Dashboard</a> -->
                     <!-- <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
@@ -33,11 +33,11 @@
                 <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
-                        <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
+                        <button class="btn btn-primary" id="sidebarToggle">Toggle Sidebar</button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                                <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/">@Jon Shek</a></li>
                                <!--  <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -54,11 +54,74 @@
                 </nav>
                 <!-- Page content-->
                 <div class="container-fluid">
-                    <h1 class="mt-4">Simple Sidebar Test Environment</h1>
-                    <p>The Experiment is either deactivated or nothing has been fetched.</p>
+                    <h1>Experiment Test Environment</h1>
+                    <p>Test your experiment or flag by filling out the fields below. You'll receive the raw responses from Amplitude at the bottom of the page.</p>
+                    <div>
+                        <h3 class="mt-4">Analytics Configuration</h3>
+                        <p>Enter your Analytics API Key and your User ID. If you don't set a User ID here, you will need to set a Device ID below. The User ID that you set here will also be passed to Experiment.</p>
+                      <div class="form-row align-items-center">
+                        <div class="col-sm-4 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">Analytics API Key</label></b>
+                          <input type="text" class="form-control" id="analyticsKey">
+                        </div>
+                        <div class="col-sm-4 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">User ID</label></b>
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="userId">
+                          </div>
+                        </div>
+                        <br>
+                        <div class="col-auto my-1">
+                          <button class="btn btn-info" id="analyticsInit">Initialize Analytics</button>
+                        </div><br>
+                        <p id='analyticsLoadMessage' style='color: green'></p>
+                    </div><hr>
+                    <div>
+                        <h3 class="mt-4">Experiment Configuration</h3>
+                        <p>Enter your information below for the Experiment you want to test. Once you hit the button below, Experiment will initialize.</p>
+                      <div class="form-row align-items-center">
+                        <div class="col-sm-4 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">Deployment Key</label></b>
+                          <input type="text" class="form-control" id="deploymentKey" placeholder="Must be Client key">
+                        </div>
+                        <div class="col-sm-4 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">Experiment/Flag Key</label></b>
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="flagKey">
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">Device ID (Optional)</label></b>
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="deviceId">
+                          </div>
+                        </div>
+                        <div class="col-sm-8 my-1">
+                          <b><label class="sr-only" for="inlineFormInputGroupUsername">Contextual User Properties (Optional)</label></b>
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="userProperties" placeholder='Must enter as JSON i.e. {"plan":"premium"}'>
+                          </div>
+                        </div>
+                        <br>
+                        <div class="col-auto my-1">
+                          <button class="btn btn-primary" id="onKeySubmit">Initialize Experiment</button>
+                        </div><br>
+                        <p id='loadMessage' style='color: green'></p>
+                        <pre id='idCheck' style='color: blue'></pre>
+                        <script src='js/experiment.js'></script>
+                      </div>
+                    </div>
+                    <hr/>
+                    <h3 class="mt-4">Test your Experiment</h3>
+                    <p>First make sure your Experiment is activated for the Deployment you set!<br>
+                        Fetch when all of the above is filled out, which will generate an Assignment event and return a response which will display below.<br>
+                        After fetch, you can hit Fetch to access the Variant value and payload.<br>
+                        Finally, you can hit Exposure to generate the Exposure event in your Analytics instance.
+                    </p>
                     <p>
-                        <button class='btn btn-success action'>Fetch</button>
-                        <button class='btn btn-danger action'>Variant</button>
+                        <button class='btn btn-success experiment'>Fetch</button>
+                        <button class='btn btn-danger experiment'>Variant</button>
+                        <button class='btn btn-warning experiment'>Exposure</button>
                         <pre style="color:green;" id="displayResponse">Response displayed here</pre>
                     </p>
                 </div>
