--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://unpkg.com/amplitude-js"></script>
         <script src="https://unpkg.com/@amplitude/experiment-js-client@1.4.0/dist/experiment.umd.js"></script>
         <script src="js/analytics.js"></script>
@@ -20,7 +21,7 @@
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading border-bottom bg-light">Sidebar</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="./routes/landingpage.html">Landing Page</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="./routes/page2.html">Page 2</a>
                    <!--  <a class="list-group-item list-group-item-action list-group-item-light p-2" id='previousAnalyticsKey'>Previous Analytics Key</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-2" id='previousUserId'>Overview</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-2" href="#!">Events</a>
@@ -37,7 +38,7 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                                <li class="nav-item active"><a class="nav-link" href="/">© Jon Shek</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
                                <!--  <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -81,7 +82,7 @@
                         <h3 class="mt-4">Experiment Configuration</h3>
                         <p>Enter your information below for the Experiment you want to test. Once you hit the button below, Experiment will initialize.</p>
                       <div class="form-row align-items-center">
-                        <div class="col-sm-4 my-1">
+                        <div class="col-sm-7 my-1">
                           <b><label class="sr-only" for="inlineFormInputGroupUsername">Deployment Key</label></b>
                           <input type="text" class="form-control" id="deploymentKey" placeholder="Must be Client key">
                         </div>
@@ -125,13 +126,22 @@
                         <button class='btn btn-success experiment'>Fetch</button>
                         <button class='btn btn-danger experiment'>Variant</button>
                         <button class='btn btn-warning experiment'>Exposure</button>
-                        <button class='btn btn-warning experiment' onclick='landingPage();'>Next Page</button>
                         <pre style="color:green;" id="displayResponse">Response displayed here</pre>
                     </p>
                     <br>
                 </div>
             </div>
         </div>
+    </div>
+        <footer class="footer mt-auto py-3 bg-light">
+          <div class="container">
+            <span style='float:right'>
+                <button class='btn btn-success experiment' onclick='landingPage();'>Next Page</button>
+            </span>
+            <br>
+          </div>
+          <br>
+        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
