--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://unpkg.com/amplitude-js"></script>
         <script src="https://unpkg.com/@amplitude/experiment-js-client@1.4.0/dist/experiment.umd.js"></script>
-        <script src="js/analytics.js"></script>
+        <script>
+          window.amplitude.init('d7f12146f8bd3e7c5c0b0d425490e533', 'session replay', {
+            defaultTracking: {
+              sessions: true // must be enabled for Start/End Session event tracking
+            }
+          });
+  
+          const sessionReplayTracking = window.sessionReplay.plugin({
+            sampleRate: .5 // collects 50% of sessions
+          });
+          
+          window.amplitude.add(sessionReplayTracking);
+        </script>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
