--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script>
         <script src="https://unpkg.com/@amplitude/experiment-js-client@1.11.0/dist/experiment.umd.js"></script>
-        <script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.6.16-min.js.gz"></script>
+        <script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.13.7-min.js.gz"></script>
+        <script type="text/javascript" src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.experiment.js"></script>
         <script>
           window.amplitude.init('f2e177f8439cb99ac2297f32dc892a1c', {
             autocapture: {
