--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.js"></script>
-        <script type="text/javascript" src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.experiment.js"></script>
+        <!-- <script type="text/javascript" src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.experiment.js"></script> -->
         <script>
           window.amplitude.init('f2e177f8439cb99ac2297f32dc892a1c', {
             autocapture: {
