--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Home</title>
     <link rel="stylesheet" href="css/styles1.css">
-    <script src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.js"></script>
+    <!-- <script src="https://cdn.amplitude.com/script/f2e177f8439cb99ac2297f32dc892a1c.js"></script>
     <script>
         window.amplitude.init('f2e177f8439cb99ac2297f32dc892a1c', {
           autocapture: {
@@ -14,13 +14,13 @@
             sessions: true
         }
         });
-    </script>
-    <script>
-        const addPromise = amplitude.add(sessionReplayTracking).promise;
+    </script> -->
+    <!-- <script> -->
+        <!-- const addPromise = amplitude.add(sessionReplayTracking).promise;
         addPromise.then(() => {
             amplitude.remove(sessionReplayTracking).promise;
         });
-    </script>
+    </script> -->
 </head>
 <body>
     <nav>
