--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             window.amplitude.track('Init Clicked', eventProperties);
           }
         </script>
-        <script>
+        <!-- <script>
           window.experiment = Experiment.Experiment.initializeWithAmplitudeAnalytics(
               'client-19YzfjOdwGMpwK6OU0uKGz8rqXh57QSV'
           );
@@ -52,7 +52,7 @@
           } else {
               const variantValue = variant.value
           }
-        </script>
+        </script> -->
     </head>
     <body>
         <div class="d-flex" id="wrapper">
